--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <!-- Ulike seksjoner -->
       <section>
         <!-- Hero seksjon -->
+        <h1>Velkommen til min side</h1>
       </section>
       <section>
         <!-- Videre informasjon -->
