--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <section>
         <!-- Hero seksjon -->
         <h1>Velkommen til min side</h1>
+        <h2>Dette er mit første nett side</h2>
       </section>
       <section>
         <!-- Videre informasjon -->
